# pixelcore

./: .dockerignore  .env.docker.example  .env.example  .gitignore  AI_RECOMMENDATION.md  AI_SEARCH.md  BI_DASHBOARD.md  CACHE_STRATEGY.md  CI_CD_GUIDE.md  Cargo.toml  DAILY_SUMMARY_2026-03-02.md  DAILY_SUMMARY_2026-03-03.md  DATA_WAREHOUSE.md  DEPLOYMENT_SCRIPTS_COMPLETE.md  DOCKER_DEPLOYMENT.md  Dockerfile  FINAL_SUMMARY_2026-02-28.md  IMPLEMENTATION_SUMMARY.md  KUBERNETES_DEPLOYMENT.md  LOAD_BALANCING.md  LOCAL_MCP_IMPLEMENTATION.md  MCP_QUICK_REFERENCE.md  MCP_SERVERS_COLLECTION.md  MCP_SKILLS_INTEGRATION.md  NEW_SKILLS_COMPLETE_2026-02-28.md  NEXT_STEPS.md  PERFORMANCE_OPTIMIZATION.md  PERFORMANCE_OPTIMIZATION_FINAL.md  PERMISSIONS_SYSTEM_2026-02-28.md  PHASE1_COMPLETE_2026-02-28.md  PHASE1_SUMMARY.md  PHASE2_COMPLETE.md  PHASE2_PLAN.md  PHASE2_PROGRESS.md  PHASE2_SUMMARY.md  PHASE3_PLAN.md  PHASE3_PROGRESS.md  PHASE3_WEEK3-4_COMPLETE.md  PHASE3_WEEK7-8_COMPLETE.md  PHASE4_COMPLETE.md  (+41 more)
.github/: secrets.example
.github/workflows/: ci-cd.yml  ci.yml  code-quality.yml  performance.yml  release.yml
app/: Dockerfile  README.md  TAURI_BUILD_GUIDE.md  index.html  nginx.conf  package-lock.json  package.json  test_tauri_commands.rs  vite.config.ts
app/src/: App.css  App.tsx  BIDashboard.tsx  ConfigurationPanel.tsx  MonitoringDashboard.tsx  ReportGenerator.tsx  WorkflowEditor.tsx  index.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: main.rs
crates/pixelcore-agents/: Cargo.toml
crates/pixelcore-agents/examples/: chat.rs
crates/pixelcore-agents/src/: claude_agent.rs  lib.rs
crates/pixelcore-ai/: Cargo.toml
crates/pixelcore-ai/src/: cache.rs  collaborative_filtering.rs  content_based.rs  error.rs  lib.rs  recommendation.rs
crates/pixelcore-analytics/: Cargo.toml
crates/pixelcore-analytics/src/: error.rs  etl.rs  lib.rs  metrics.rs  query.rs  warehouse.rs
crates/pixelcore-auth/: Cargo.toml
crates/pixelcore-auth/src/: audit.rs  lib.rs  models.rs  rbac.rs  tests.rs
crates/pixelcore-backup/: Cargo.toml
crates/pixelcore-backup/src/: backup.rs  lib.rs  models.rs  restore.rs
crates/pixelcore-cache/: Cargo.toml
crates/pixelcore-cache/src/: lib.rs
crates/pixelcore-compliance/: Cargo.toml
crates/pixelcore-compliance/src/: audit.rs  data_deletion.rs  data_export.rs  gdpr.rs  lib.rs  models.rs  tests.rs
crates/pixelcore-contract/: Cargo.toml
crates/pixelcore-contract/src/: executor.rs  lib.rs  models.rs  template.rs  tests.rs  validator.rs
crates/pixelcore-i18n/: Cargo.toml
crates/pixelcore-i18n/src/: error.rs  formatter.rs  lib.rs  locale.rs  translator.rs
crates/pixelcore-logging/: Cargo.toml
crates/pixelcore-logging/src/: lib.rs  logger.rs  models.rs  tracer.rs
crates/pixelcore-marketplace/: Cargo.toml
crates/pixelcore-marketplace/src/: catalog.rs  discovery.rs  lib.rs  matcher.rs  tests.rs
crates/pixelcore-monitoring/: Cargo.toml
crates/pixelcore-monitoring/src/: alerts.rs  lib.rs  metrics.rs  models.rs  notifications.rs
crates/pixelcore-payment/: Cargo.toml
crates/pixelcore-payment/src/: account.rs  gateway.rs  lib.rs  models.rs  settlement.rs  tests.rs
crates/pixelcore-region/: Cargo.toml
crates/pixelcore-region/src/: error.rs  failover.rs  lib.rs  load_balancer.rs  manager.rs  region.rs  replication.rs
crates/pixelcore-sdk/: Cargo.toml
crates/pixelcore-sdk/src/: client.rs  lib.rs  manager.rs  models.rs  plugin.rs
crates/pixelcore-search/: Cargo.toml
crates/pixelcore-search/src/: autocomplete.rs  cache.rs  engine.rs  error.rs  indexer.rs  lib.rs  query.rs  ranking.rs
crates/pixelcore-security/: Cargo.toml
crates/pixelcore-security/src/: api_key.rs  encryption.rs  jwt.rs  key_manager.rs  lib.rs  models.rs  security_audit.rs  tests.rs
crates/pixelcore-skills/: Cargo.toml
crates/pixelcore-skills/src/: error.rs  lib.rs  permissions.rs  registry.rs  skill.rs
crates/pixelcore-skills/src/builtins/: code_execution.rs  compute.rs  data.rs  delegate.rs  echo.rs  excel.rs  http_fetch.rs  mcp_provider.rs  mcp_skill.rs  mod.rs  pdf.rs  postgres.rs  redis.rs  sqlite.rs  storage.rs
crates/pixelcore-storage/: Cargo.toml
crates/pixelcore-storage/src/: encrypted_store.rs  error.rs  lib.rs  store.rs
crates/pixelcore-storage/tests/: integration_test.rs
crates/pixelcore-tenant/: Cargo.toml
crates/pixelcore-tenant/src/: lib.rs  manager.rs  models.rs  tests.rs
crates/pixelcore-transaction/: Cargo.toml
crates/pixelcore-transaction/src/: lib.rs  manager.rs  models.rs  state_machine.rs  storage.rs  tests.rs
deployment/: BUILD_STATUS.md  DEPLOYMENT_GUIDE.md  DOCKER_BUILD_GUIDE.md  LOCAL_TEST_GUIDE.md  QUICK_START.md  README.md  START_DEPLOYMENT.md  TEST_DEPLOYMENT_SUMMARY.md
docs/: GITOPS_GUIDE.md  I18N_GUIDE.md  PERFORMANCE_TUNING.md  PHASE5_COMPLETE.md  PHASE6_COMPLETE.md  RELIABILITY.md  SECURITY_HARDENING.md  SERVICE_MESH.md
examples/: COMPLETE_MCP_DEMO.md  agent_pool_demo.rs  agent_registry_demo.rs  agent_task_system.rs  ai_recommendation_demo.rs  analytics_demo.rs  auth_demo.rs  backup_demo.rs  batch_processor_demo.rs  billing_demo.rs  cache_demo.rs  cache_optimization_demo.rs  code_execution_demo.rs  complete_mcp_demo.rs  compliance_demo.rs  comprehensive_demo.rs  connection_pool_demo.rs  excel_demo.rs  file_streaming_demo.rs  history_manager_demo.rs  local_mcp_demo.rs  logging_demo.rs  marketplace_demo.rs  mcp_skills_demo.rs  mcp_skills_test.rs  monitoring_demo.rs  multi_agent_collaboration.rs  payment_demo.rs  pdf_demo.rs  performance_test.rs  postgres_demo.rs  redis_demo.rs  request_dedup_demo.rs  sdk_demo.rs  search_demo.rs  security_demo.rs  skill_preloader_demo.rs  smart_cache_demo.rs  smart_contract_demo.rs  sqlite_demo.rs  (+16 more)
monitoring/: alertmanager-config.yaml  prometheus.yml
reliability/: INCIDENT_RESPONSE.md  README.md  SLA.md  backup-storage-class.yaml  install-velero.sh  restore-procedures.yaml  validation-checklist.md  velero-schedules.yaml  verify-backup.sh
scripts/: init-db.sql
security/: README.md  security-scan.sh  trivy.yaml
src/: main.rs
tests/: integration_test.rs
(+167 files in other folders)
