[workspace]
resolver = "2"
members = [
    ".",
    "crates/pixelcore-runtime",
    "crates/pixelcore-swarm",
    "crates/pixelcore-heartbeat",
    "crates/pixelcore-claw",
    "crates/pixelcore-skills",
    "crates/pixelcore-storage",
    "crates/pixelcore-ipc",
    "crates/pixelcore-agents",
    "crates/pixelcore-registry",
    "crates/pixelcore-marketplace",
    "crates/pixelcore-reputation",
    "crates/pixelcore-transaction",
    "crates/pixelcore-contract",
    "crates/pixelcore-payment",
    "crates/pixelcore-billing",
    "crates/pixelcore-tenant",
    "crates/pixelcore-auth",
    "crates/pixelcore-security",
    "crates/pixelcore-compliance",
    "app/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["PixelCore Team"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
flume = "0.11"
aes-gcm = "0.10"
sha2 = "0.10"
sled = "0.34"
reqwest = { version = "0.12", features = ["json", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
serde_yaml = "0.9"
quick-xml = { version = "0.36", features = ["serialize"] }
calamine = "0.26"
rust_xlsxwriter = "0.79"
pdf-extract = "0.7"
tokio-postgres = "0.7"
dotenvy = "0.15"
pixelcore-runtime = { path = "crates/pixelcore-runtime" }
pixelcore-swarm = { path = "crates/pixelcore-swarm" }
pixelcore-heartbeat = { path = "crates/pixelcore-heartbeat" }
pixelcore-claw = { path = "crates/pixelcore-claw" }
pixelcore-skills = { path = "crates/pixelcore-skills" }
pixelcore-storage = { path = "crates/pixelcore-storage" }
pixelcore-ipc = { path = "crates/pixelcore-ipc" }
pixelcore-agents = { path = "crates/pixelcore-agents" }
pixelcore-registry = { path = "crates/pixelcore-registry" }
pixelcore-marketplace = { path = "crates/pixelcore-marketplace" }
pixelcore-reputation = { path = "crates/pixelcore-reputation" }
pixelcore-transaction = { path = "crates/pixelcore-transaction" }
pixelcore-contract = { path = "crates/pixelcore-contract" }
pixelcore-payment = { path = "crates/pixelcore-payment" }
pixelcore-billing = { path = "crates/pixelcore-billing" }
pixelcore-tenant = { path = "crates/pixelcore-tenant" }
pixelcore-auth = { path = "crates/pixelcore-auth" }
pixelcore-security = { path = "crates/pixelcore-security" }
pixelcore-compliance = { path = "crates/pixelcore-compliance" }

[package]
name = "pixelcore"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
pixelcore-runtime = { workspace = true }
pixelcore-swarm = { workspace = true }
pixelcore-heartbeat = { workspace = true }
pixelcore-claw = { workspace = true }
pixelcore-skills = { workspace = true }
pixelcore-storage = { workspace = true }
pixelcore-ipc = { workspace = true }
pixelcore-agents = { workspace = true }
pixelcore-registry = { workspace = true }
pixelcore-marketplace = { workspace = true }
pixelcore-transaction = { workspace = true }
pixelcore-contract = { workspace = true }
pixelcore-payment = { workspace = true }
pixelcore-billing = { workspace = true }
pixelcore-tenant = { workspace = true }
pixelcore-auth = { workspace = true }
pixelcore-security = { workspace = true }
pixelcore-compliance = { workspace = true }

[dev-dependencies]
tempfile = "3"
