[package]
name = "pixelcore-agents"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
pixelcore-runtime = { workspace = true }
pixelcore-claw = { workspace = true }
pixelcore-skills = { workspace = true }
pixelcore-storage = { workspace = true }
