[package]
name = "pixelcore-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Machine Learning
linfa = "0.7"
linfa-clustering = "0.7"
ndarray = "0.16"

# Redis for caching
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Logging
tracing = "0.1"

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
