[package]
name = "pixelcore-analytics"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Database
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4", "with-uuid-1"] }
deadpool-postgres = "0.14"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Metrics
prometheus = "0.13"

[dev-dependencies]
tokio-test = "0.4"
