[package]
name = "pixelcore-backup"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = "1"

# 文件操作
walkdir = "2"

# 压缩
flate2 = "1"
tar = "0.4"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
