[package]
name = "pixelcore-compliance"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }

# 用于 CSV 导出
csv = "1.3"

# 用于日志签名
sha2 = "0.10"
hex = "0.4"
