[package]
name = "pixelcore-i18n"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Internationalization
fluent = "0.16"
fluent-bundle = "0.15"
unic-langid = "0.9"

# Logging
tracing = "0.1"

# File system
walkdir = "2.5"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
