[package]
name = "pixelcore-monitoring"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }

# 用于系统指标收集
sysinfo = "0.32"

# 用于 Prometheus metrics
# prometheus = { version = "0.13", features = ["process"] }
