[package]
name = "pixelcore-region"
version.workspace = true
edition.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Redis for distributed coordination
redis = { workspace = true }

# HTTP client for health checks
reqwest = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
