[package]
name = "pixelcore-sdk"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = "1"
async-trait = { workspace = true }

# 动态加载
libloading = "0.8"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
