[package]
name = "pixelcore-security"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }

# JWT 认证
jsonwebtoken = "9.3"

# 加密
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"

# OAuth (可选，用于未来扩展)
# oauth2 = "4.4"
