[package]
name = "pixelcore-skills"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
pixelcore-runtime = { workspace = true }
pixelcore-claw = { workspace = true }
pixelcore-storage = { workspace = true }
pixelcore-swarm = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
rusqlite = { workspace = true }
redis = { workspace = true }
serde_yaml = { workspace = true }
quick-xml = { workspace = true }
calamine = { workspace = true }
rust_xlsxwriter = { workspace = true }
meval = "0.2"

[dev-dependencies]
tempfile = "3"

