[package]
name = "pixelcore-storage"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
aes-gcm = { workspace = true }
sha2 = { workspace = true }
sled = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }
pixelcore-runtime = { workspace = true }

[dev-dependencies]
tempfile = "3"
